task-manager-angular/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-angular-service
  labels:
    app: task-manager-angular
spec:
  selector:
    app: task-manager-angular
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
